# LethalMenu

./: .gitignore  CODE_IMPROVEMENTS.md  IMPROVEMENTS_SUMMARY.md  LethalMenu.slnx  LethalMenu.vcxproj  LethalMenu.vcxproj.filters  SECURITY_SUMMARY.md
.github/instructions/: copilot-instruction.instructions.md
docs/: 01-CPP-FUNDAMENTALS.md  02-WINDOWS-INTERNALS.md  03-REVERSING-BASICS.md  04-HOOKING-TECHNIQUES.md  05-UNITY-MONO-HACKING.md  06-PROJECT-STRUCTURE.md  07-RESOURCES.md
src/: LethalMenu.slnx  dllmain.cpp
src/LethalMenu/: Hack.cs  HackExtensions.cs  LethalMenu.csproj  LethalMenu.csproj.lscache  LethalMenuMod.cs  Loader.cs  ServerBrowser.cs  ServerHotSwap.cs  Settings.cs
src/LethalMenu/Cheats/: BHopCheat.cs  ChamCheat.cs  CheatBase.cs  ClearVisionCheat.cs  ESPCheat.cs  EnemyControlCheat.cs  FollowCheat.cs  FreeCamCheat.cs  InfoDisplayCheat.cs  ItemSlotsCheat.cs  MinimalGUICheat.cs  NetworkCheats.Chat.cs  NetworkCheats.Cosmetic.cs  NetworkCheats.CreditsShop.cs  NetworkCheats.EnemyControl.cs  NetworkCheats.EnemySpawn.cs  NetworkCheats.FakeDeath.cs  (+28 more)
src/Native/: Bootstrap.cpp  CMakeLists.txt
src/core/: cheat.cpp  cheat.h  exception.cpp  exception.h  hooks.cpp  hooks.h  mono.cpp  mono.h  renderer.cpp  renderer.h
src/features/: esp.cpp  esp.h  features.h  misc.cpp  misc.h  player.cpp  player.h
src/gui/: menu.cpp  menu.h
src/sdk/: bindings.cpp  bindings.h  game.cpp  game.h  unity.cpp  unity.h
src/utils/: config.cpp  config.h  console.cpp  console.h  logger.cpp  logger.h
tools/: Assert-Architecture.ps1
tools/Unity/: CreaturePreviewBundleBuilder.cs
(+100 files in other folders)
